--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ li {
 
 #top .header_right .menu-btn {
   position: fixed;
+  top: 10px;
   right: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -57,6 +58,7 @@ li {
       -ms-flex-align: center;
           align-items: center;
   z-index: 90;
+  background-color: #3584bb;
 }
 
 #top .header_right .menu-btn span,
@@ -67,7 +69,7 @@ li {
   height: 3px;
   width: 25px;
   border-radius: 3px;
-  background-color: #000;
+  background-color: #ffffff;
   position: absolute;
 }
 
@@ -98,6 +100,69 @@ li {
 
 #top .header_right #menu-btn-check {
   display: none;
+}
+
+#top .header_right .menu-content {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 80;
+  background-color: #3584bb;
+}
+
+#top .header_right .menu-content ul {
+  padding: 70px 10px 0;
+}
+
+#top .header_right .menu-content ul li {
+  border-bottom: solid 1px #ffffff;
+  list-style: none;
+}
+
+#top .header_right .menu-content ul li a {
+  display: block;
+  width: 100%;
+  font-size: 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 9px 15px 10px 0;
+  position: relative;
+}
+
+#top .header_right .menu-content ul li a::before {
+  content: "";
+  width: 7px;
+  height: 7px;
+  border-top: solid 2px #ffffff;
+  border-right: solid 2px #ffffff;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  position: absolute;
+  right: 11px;
+  top: 16px;
+}
+
+#top .header_right .menu-content {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 100%;
+  /*leftの値を変更してメニューを画面外へ*/
+  z-index: 80;
+  background-color: #3584bb;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  /*アニメーション設定*/
+}
+
+#top .header_right #menu-btn-check:checked ~ .menu-content {
+  left: 0;
+  /*メニューを画面内へ*/
 }
 
 #top .header .clear {
