--- a/_src/sass/_mixins.scss
+++ b/_src/sass/_mixins.scss
@@ -2,7 +2,6 @@
 
   .menu-btn {
       position: fixed;
-      top: 10px;
       right: 10px;
       display: flex;
       height: 60px;
@@ -10,7 +9,6 @@
       justify-content: center;
       align-items: center;
       z-index: 90;
-      background-color: #3584bb;
   }
   .menu-btn span,
   .menu-btn span:before,
@@ -20,7 +18,7 @@
       height: 3px;
       width: 25px;
       border-radius: 3px;
-      background-color: #ffffff;
+      background-color: #000;
       position: absolute;
   }
   .menu-btn span:before {
