--- a/_src/sass/_top.scss
+++ b/_src/sass/_top.scss
@@ -1,23 +1,78 @@
 .header {
-  // display: flex;
-  border-bottom: 1px solid #000;
-  height: 60px;
-  &_left {
-    .title {
-      position: fixed;
-      top: 10px;
-      font-size: 20px;
-      line-height: 1em;
-      padding: 10px;
-      float: left;
+    border-bottom: 1px solid #edece6;
+    height: 60px;
+    z-index: 3;
+    &_left {
+        .title {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            font-size: 20px;
+            line-height: 1em;
+            float: left;
+        }
     }
-  }
-  &_right{
-    float: right;
-    @include hamburgerMenu;
-  }
-  .clear{
-    clear: both;
-  }
+    &_right {
+        float: right;
+        @include hamburgerMenu;
+    }
+    .clear {
+        clear: both;
+    }
 }
 
+.main {
+    margin: 20px 0;
+    height: 600px;
+    width: 100%;
+    .logs {
+        width: 90%;
+        margin: 0 auto;
+        &_list {
+            &_item {
+                .logs_image {
+                    object-fit: cover;
+                    background-size: cover;
+                    // background-repeat: no-repeat;
+                    height: 500px;
+                    background-image: url("../img/top.jpeg");
+                    border-radius: 10px;
+                    z-index: 1;
+                    &_tag {
+                        background-color: #fffef8;
+                        height: 100%;
+                        width: 300px;
+                        z-index: 2;
+                        position: relative;
+                        top: 400px;
+                        border-top-right-radius: 10px;
+                        padding: 10px;
+                        h3 {
+                            font-family: Arial, Helvetica, sans-serif;
+                            font-size: 0.8rem;
+                            color: #ffd54d;
+                        }
+                        .text {
+                            font-size: 1.0rem;
+                            font-weight: bold;
+                            line-height: 1.6;
+                        }
+                        .place {
+                            font-size: 0.8rem;
+                            line-height: 1.6;
+                            color: #444;
+                        }
+                        .hashtag_list {
+                            display: flex;
+                            &_item {
+                                color: #666;
+                                font-size: 0.8rem;
+                                margin-right: 4px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
