--- a/_src/sass/_base.scss
+++ b/_src/sass/_base.scss
@@ -1,34 +1,35 @@
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  width: 375px;
-  margin: 0 auto;
-  font-size: 15px;
-  background-color: #fffef8;
-  line-height: 1.5;
+    width: 375px;
+    margin: 0 auto;
+    font-size: 15px;
+    background-color: $backgroundColor;
+    line-height: 1.5;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-  margin: 0;
+    margin: 0;
 }
 
-
-p, li {
-  line-height: 2rem;
+p,
+li {
+    line-height: 2rem;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 li {
-  list-style: none;
+    list-style: none;
 }
 
-p{
-  font-family: Arial, Helvetica, sans-serif;
-  letter-spacing: 0;
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 0;
 }
