--- a/_src/sass/_top.scss
+++ b/_src/sass/_top.scss
@@ -1,5 +1,5 @@
 .header {
-    border-bottom: 1px solid #edece6;
+    border-bottom: $border;
     height: 60px;
     z-index: 3;
     &_left {
@@ -23,56 +23,10 @@
 
 .main {
     margin: 20px 0;
-    height: 600px;
     width: 100%;
     .logs {
         width: 90%;
         margin: 0 auto;
-        &_list {
-            &_item {
-                .logs_image {
-                    object-fit: cover;
-                    background-size: cover;
-                    // background-repeat: no-repeat;
-                    height: 500px;
-                    background-image: url("../img/top.jpeg");
-                    border-radius: 10px;
-                    z-index: 1;
-                    &_tag {
-                        background-color: #fffef8;
-                        height: 100%;
-                        width: 300px;
-                        z-index: 2;
-                        position: relative;
-                        top: 400px;
-                        border-top-right-radius: 10px;
-                        padding: 10px;
-                        h3 {
-                            font-family: Arial, Helvetica, sans-serif;
-                            font-size: 0.8rem;
-                            color: #ffd54d;
-                        }
-                        .text {
-                            font-size: 1.0rem;
-                            font-weight: bold;
-                            line-height: 1.6;
-                        }
-                        .place {
-                            font-size: 0.8rem;
-                            line-height: 1.6;
-                            color: #444;
-                        }
-                        .hashtag_list {
-                            display: flex;
-                            &_item {
-                                color: #666;
-                                font-size: 0.8rem;
-                                margin-right: 4px;
-                            }
-                        }
-                    }
-                }
-            }
-        }
+        @include logs_list;
     }
 }
