--- a/css/style.css
+++ b/css/style.css
@@ -1,242 +1,265 @@
 @charset "UTF-8";
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    width: 375px;
-    margin: 0 auto;
-    font-size: 15px;
-    background-color: #fffef8;
-    line-height: 1.5;
-    font-family: Arial, Helvetica, sans-serif;
+  width: 375px;
+  margin: 0 auto;
+  font-size: 15px;
+  background-color: #fffef8;
+  line-height: 1.5;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    margin: 0;
+  margin: 0;
 }
 
 p,
 li {
-    line-height: 2rem;
+  line-height: 2rem;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
-    letter-spacing: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: 0;
 }
 
 #top .header {
-    border-bottom: 1px solid #edece6;
-    height: 60px;
-    z-index: 3;
+  border-bottom: 1px solid #edece6;
+  height: 60px;
+  z-index: 3;
 }
 
 #top .header_left .title {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    font-size: 20px;
-    line-height: 1em;
-    float: left;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  font-size: 20px;
+  line-height: 1em;
+  float: left;
 }
 
 #top .header_right {
-    float: right;
+  float: right;
 }
 
 #top .header_right .menu-btn {
-    position: fixed;
-    right: 10px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: 60px;
-    width: 60px;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    z-index: 90;
+  position: fixed;
+  right: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 60px;
+  width: 60px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 90;
 }
 
 #top .header_right .menu-btn span,
 #top .header_right .menu-btn span:before,
 #top .header_right .menu-btn span:after {
-    content: '';
-    display: block;
-    height: 3px;
-    width: 25px;
-    border-radius: 3px;
-    background-color: #000;
-    position: absolute;
+  content: '';
+  display: block;
+  height: 3px;
+  width: 25px;
+  border-radius: 3px;
+  background-color: #000;
+  position: absolute;
 }
 
 #top .header_right .menu-btn span:before {
-    bottom: 8px;
+  bottom: 8px;
 }
 
 #top .header_right .menu-btn span:after {
-    top: 8px;
+  top: 8px;
 }
 
-#top .header_right #menu-btn-check:checked~.menu-btn span {
-    background-color: rgba(255, 255, 255, 0);
-    /*メニューオープン時は真ん中の線を透明にする*/
+#top .header_right #menu-btn-check:checked ~ .menu-btn span {
+  background-color: rgba(255, 255, 255, 0);
+  /*メニューオープン時は真ん中の線を透明にする*/
 }
 
-#top .header_right #menu-btn-check:checked~.menu-btn span::before {
-    bottom: 0;
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
+#top .header_right #menu-btn-check:checked ~ .menu-btn span::before {
+  bottom: 0;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
-#top .header_right #menu-btn-check:checked~.menu-btn span::after {
-    top: 0;
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
+#top .header_right #menu-btn-check:checked ~ .menu-btn span::after {
+  top: 0;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 #top .header_right #menu-btn-check {
-    display: none;
+  display: none;
 }
 
 #top .header_right .menu-content {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 80;
-    background-color: #3584bb;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 80;
+  background-color: #3584bb;
 }
 
 #top .header_right .menu-content ul {
-    padding: 70px 10px 0;
+  padding: 70px 10px 0;
 }
 
 #top .header_right .menu-content ul li {
-    border-bottom: solid 1px #ffffff;
-    list-style: none;
+  border-bottom: solid 1px #ffffff;
+  list-style: none;
 }
 
 #top .header_right .menu-content ul li a {
-    display: block;
-    width: 100%;
-    font-size: 15px;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    color: #ffffff;
-    text-decoration: none;
-    padding: 9px 15px 10px 0;
-    position: relative;
+  display: block;
+  width: 100%;
+  font-size: 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 9px 15px 10px 0;
+  position: relative;
 }
 
 #top .header_right .menu-content ul li a::before {
-    content: "";
-    width: 7px;
-    height: 7px;
-    border-top: solid 2px #ffffff;
-    border-right: solid 2px #ffffff;
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-    position: absolute;
-    right: 11px;
-    top: 16px;
+  content: "";
+  width: 7px;
+  height: 7px;
+  border-top: solid 2px #ffffff;
+  border-right: solid 2px #ffffff;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  position: absolute;
+  right: 11px;
+  top: 16px;
 }
 
 #top .header_right .menu-content {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 100%;
-    /*leftの値を変更してメニューを画面外へ*/
-    z-index: 80;
-    background-color: #3584bb;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
-    /*アニメーション設定*/
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 100%;
+  /*leftの値を変更してメニューを画面外へ*/
+  z-index: 80;
+  background-color: #3584bb;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  /*アニメーション設定*/
 }
 
-#top .header_right #menu-btn-check:checked~.menu-content {
-    left: 0;
-    /*メニューを画面内へ*/
+#top .header_right #menu-btn-check:checked ~ .menu-content {
+  left: 0;
+  /*メニューを画面内へ*/
 }
 
 #top .header .clear {
-    clear: both;
+  clear: both;
 }
 
 #top .main {
-    margin: 20px 0;
-    width: 100%;
+  margin: 20px 0;
+  width: 100%;
 }
 
 #top .main .logs {
-    width: 90%;
-    margin: 0 auto;
+  width: 90%;
+  margin: 0 auto;
 }
 
-#top .main .logs_list_item .logs_image {
-    -o-object-fit: cover;
-    object-fit: cover;
-    background-size: cover;
-    height: 500px;
-    background-image: url("../img/top.jpeg");
-    border-radius: 10px;
-    z-index: 1;
+#top .main .logs .logs_list_item {
+  margin-bottom: 100px;
 }
 
-#top .main .logs_list_item .logs_image_tag {
-    background-color: #fffef8;
-    width: 300px;
-    z-index: 2;
-    position: relative;
-    top: 400px;
-    border-top-right-radius: 10px;
-    padding: 10px;
+#top .main .logs .logs_list_item .logs_image {
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  background-size: cover;
+  height: 500px;
+  border-radius: 10px;
+  z-index: 1;
 }
 
-#top .main .logs_list_item .logs_image_tag h3 {
-    font-size: 0.8rem;
-    color: #ffd54d;
+#top .main .logs .logs_list_item .logs_image_tag {
+  display: block;
+  background-color: #fffef8;
+  width: 300px;
+  z-index: 2;
+  position: relative;
+  top: 400px;
+  border-top-right-radius: 10px;
+  padding: 10px;
 }
 
-#top .main .logs_list_item .logs_image_tag .text {
-    font-size: 1.0rem;
-    font-weight: bold;
-    line-height: 1.6;
+#top .main .logs .logs_list_item .logs_image_tag h3 {
+  font-size: 0.8rem;
+  color: #ffd54d;
 }
 
-#top .main .logs_list_item .logs_image_tag .place {
-    font-size: 0.8rem;
-    line-height: 1.6;
-    color: #444;
+#top .main .logs .logs_list_item .logs_image_tag .text {
+  font-size: 1.0rem;
+  font-weight: bold;
+  line-height: 1.6;
 }
 
-#top .main .logs_list_item .logs_image_tag .hashtag_list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+#top .main .logs .logs_list_item .logs_image_tag .place {
+  font-size: 0.8rem;
+  line-height: 1.6;
+  color: #444;
 }
 
-#top .main .logs_list_item .logs_image_tag .hashtag_list_item {
-    color: #666;
-    font-size: 0.8rem;
-    margin-right: 4px;
+#top .main .logs .logs_list_item .logs_image_tag .hashtag_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
+#top .main .logs .logs_list_item .logs_image_tag .hashtag_list_item {
+  color: #666;
+  font-size: 0.8rem;
+  margin-right: 4px;
+}
 
+#top .main .logs .logs_list_item .logs_image_01 {
+  background-image: url("../img/top.jpeg");
+}
+
+#top .main .logs .logs_list_item .logs_image_02 {
+  background-image: url("../img/oneyear.jpeg");
+}
+
+#top .main .logs .logs_list_item .logs_image_03 {
+  background-image: url("../img/oneyear.jpeg");
+}
+
+#top .main .logs .logs_list_item .logs_image_04 {
+  background-image: url("../img/oneyear.jpeg");
+}
+
+#top .main .logs .logs_list_item .logs_image_05 {
+  background-image: url("../img/oneyear.jpeg");
+}
 /*# sourceMappingURL=style.css.map */
