--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
   background-color: #fffef8;
   line-height: 1.5;
   font-family: Arial, Helvetica, sans-serif;
+  color: #000;
 }
 
 h1 {
@@ -24,6 +25,7 @@ li {
 
 a {
   text-decoration: none;
+  color: #000;
 }
 
 li {
@@ -184,9 +186,10 @@ p {
   width: 100%;
 }
 
-#top .main .logs {
-  width: 90%;
+#top .main section {
+  width: 88%;
   margin: 0 auto;
+  margin-bottom: 60px;
 }
 
 #top .main .logs .logs_list_item {
@@ -252,7 +255,7 @@ p {
 }
 
 #top .main .logs .logs_list_item .logs_image_03 {
-  background-image: url("../img/oneyear.jpeg");
+  background-image: url("../img/tranporin.JPG");
 }
 
 #top .main .logs .logs_list_item .logs_image_04 {
@@ -261,5 +264,26 @@ p {
 
 #top .main .logs .logs_list_item .logs_image_05 {
   background-image: url("../img/oneyear.jpeg");
+}
+
+#top .main .link_button {
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 88%;
+  margin: 0 auto;
+  border: 1px solid #ffd54d;
+  border-radius: 10px;
+  background-color: #ffd54d;
+}
+
+#top .main .link_button a {
+  color: #fffef8;
+}
+
+#top .main .link_button_icon {
+  margin-right: 10px;
 }
 /*# sourceMappingURL=style.css.map */
