--- a/_src/sass/_base.scss
+++ b/_src/sass/_base.scss
@@ -10,6 +10,7 @@ body {
     background-color: $backgroundColor;
     line-height: 1.5;
     font-family: Arial, Helvetica, sans-serif;
+    color: #000;
 }
 
 h1 {
@@ -23,6 +24,7 @@ li {
 
 a {
     text-decoration: none;
+    color: #000;
 }
 
 li {
