--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,12 @@ p {
   font-size: 20px;
   line-height: 1em;
   float: left;
+  z-index: 3;
 }
 
 #top .header_right {
   float: right;
+  z-index: 3;
 }
 
 #top .header_right .menu-btn {
@@ -115,13 +117,13 @@ p {
 }
 
 #top .header_right .menu-content {
-  width: 100%;
+  width: 96%;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 80;
-  background-color: #3584bb;
+  background-color: #ffd54d;
 }
 
 #top .header_right .menu-content ul {
@@ -129,28 +131,32 @@ p {
 }
 
 #top .header_right .menu-content ul li {
-  border-bottom: solid 1px #ffffff;
+  border-bottom: solid 2px #000;
   list-style: none;
+  margin-top: 10px;
 }
 
 #top .header_right .menu-content ul li a {
   display: block;
-  width: 100%;
-  font-size: 15px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  color: #ffffff;
+  color: #000;
+  font-weight: bold;
   text-decoration: none;
   padding: 9px 15px 10px 0;
   position: relative;
+}
+
+#top .header_right .menu-content ul li .menu_icon {
+  margin: 0 6px;
 }
 
 #top .header_right .menu-content ul li a::before {
   content: "";
   width: 7px;
   height: 7px;
-  border-top: solid 2px #ffffff;
-  border-right: solid 2px #ffffff;
+  border-top: solid 2px #000;
+  border-right: solid 2px #000;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   position: absolute;
@@ -166,7 +172,7 @@ p {
   left: 100%;
   /*leftの値を変更してメニューを画面外へ*/
   z-index: 80;
-  background-color: #3584bb;
+  background-color: #ffd54d;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   /*アニメーション設定*/
