変数の追加

--- a/_src/sass/_top.scss
+++ b/_src/sass/_top.scss
@@ -29,7 +29,9 @@
     section {
         width: $contentWidth;
         margin: 0 auto;
-        margin-bottom: 60px;
+        padding-bottom: $sectionBottomSpace;
+        margin-bottom: $sectionBottomSpace;
+        border-bottom: $border;
     }
     .logs {
         @include logs_list;
