--- a/_src/sass/_mixins.scss
+++ b/_src/sass/_mixins.scss
@@ -1,3 +1,13 @@
+@mixin section_title {
+    .section_title {
+        i {
+            margin-right: 6px;
+        }
+        text-align: center;
+        padding-bottom: 10px;
+    }
+}
+
 @mixin hamburgerMenu {
     .menu-btn {
         position: fixed;
@@ -99,47 +109,52 @@
     }
 }
 
+@mixin _tag($parentHight) {
+    display: block;
+    background-color: $backgroundColor;
+    width: 300px;
+    z-index: 2;
+    position: relative;
+    top: calc(#{$parentHight} - 100px);
+    border-top-right-radius: $borderRadius;
+    padding: 10px;
+    h3 {
+        font-size: 0.8rem;
+        color: $yellow;
+    }
+    .text {
+        font-size: 1.0rem;
+        font-weight: bold;
+        line-height: 1.6;
+    }
+    .place {
+        font-size: 0.8rem;
+        line-height: 1.6;
+        color: $gray_01;
+    }
+    .hashtag_list {
+        display: flex;
+        &_item {
+            color: $gray_02;
+            font-size: 0.8rem;
+            margin-right: 4px;
+        }
+    }
+}
+
 @mixin logs_list {
     .logs_list_item {
+        width: 100%;
         margin-bottom: 100px;
         .logs_image {
             display: block;
             object-fit: cover;
             background-size: cover;
             height: 500px;
-            border-radius: 10px;
+            border-radius: $borderRadius;
             z-index: 1;
             &_tag {
-                display: block;
-                background-color: $backgroundColor;
-                width: 300px;
-                z-index: 2;
-                position: relative;
-                top: 400px;
-                border-top-right-radius: $borderRadius;
-                padding: 10px;
-                h3 {
-                    font-size: 0.8rem;
-                    color: $yellow;
-                }
-                .text {
-                    font-size: 1.0rem;
-                    font-weight: bold;
-                    line-height: 1.6;
-                }
-                .place {
-                    font-size: 0.8rem;
-                    line-height: 1.6;
-                    color: $gray_01;
-                }
-                .hashtag_list {
-                    display: flex;
-                    &_item {
-                        color: $gray_02;
-                        font-size: 0.8rem;
-                        margin-right: 4px;
-                    }
-                }
+                @include _tag("500px");
             }
         }
         .logs_image_01 {
@@ -151,16 +166,12 @@
         .logs_image_03 {
             background-image: url("../img/tranporin.JPG");
         }
-        .logs_image_04 {
-            background-image: url("../img/oneyear.jpeg");
-        }
-        .logs_image_05 {
-            background-image: url("../img/oneyear.jpeg");
-        }
     }
 }
 
-@mixin link_button {
+@mixin link_button($buttonPositionTop) {
+    position: absolute;
+    top: $buttonPositionTop;
     font-size: 1.2rem;
     font-weight: bold;
     text-align: center;
@@ -171,10 +182,140 @@
     border: 1px solid $yellow;
     border-radius: $borderRadius;
     background-color: $yellow;
-    a {
-        color: $backgroundColor;
+    color: $backgroundColor;
+    .link_icon {
+        margin-right: 6px;
     }
-    &_icon {
-        margin-right: 10px;
+}
+
+@mixin log_list_animation {
+    ul {
+        position: relative;
+    }
+    .logs_list_item {
+        position: absolute;
+        left: 0;
+        top: 0;
+        opacity: 0;
+        -webkit-animation: anime 30s 0s infinite;
+        animation: anime 30s 0s infinite;
+    }
+    .logs_list_item:nth-of-type(2) {
+        -webkit-animation-delay: 10s;
+        animation-delay: 10s;
+    }
+    .logs_list_item:nth-of-type(3) {
+        -webkit-animation-delay: 20s;
+        animation-delay: 20s;
+    }
+    /* ふわっとアニメーション */
+    @keyframes anime {
+        0% {
+            opacity: 0;
+        }
+        30% {
+            opacity: 1;
+        }
+        35% {
+            opacity: 1;
+        }
+        50% {
+            opacity: 0;
+            z-index: 9;
+        }
+        100% {
+            opacity: 0;
+        }
+    }
+    @-webkit-keyframes anime {
+        0% {
+            opacity: 0;
+        }
+        30% {
+            opacity: 1;
+        }
+        35% {
+            opacity: 1;
+        }
+        50% {
+            opacity: 0;
+            z-index: 9;
+        }
+        100% {
+            opacity: 0;
+        }
+    }
+}
+
+@mixin event_list_animation {
+    ul {
+        position: relative;
+    }
+    .item {
+        opacity: 0;
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background-size: cover;
+        border-radius: $borderRadius;
+        background-repeat: no-repeat;
+        -webkit-animation: anime 30s 0s infinite;
+        animation: anime 30s 0s infinite;
+        &_tag {
+            @include _tag("240px");
+        }
+    }
+    .item:nth-of-type(1) {
+        background-image: url(../img/usj.jpeg);
+    }
+    .item:nth-of-type(2) {
+        -webkit-animation-delay: 10s;
+        animation-delay: 10s;
+        background-image: url(../img/twoyears.jpg);
+    }
+    .item:nth-of-type(3) {
+        -webkit-animation-delay: 20s;
+        animation-delay: 20s;
+        background-image: url(../img/christmas02.jpeg);
+    }
+    /* ふわっとアニメーション */
+    @keyframes anime {
+        0% {
+            opacity: 0;
+        }
+        30% {
+            opacity: 1;
+        }
+        35% {
+            opacity: 1;
+        }
+        50% {
+            opacity: 0;
+            z-index: 9;
+        }
+        100% {
+            opacity: 0;
+        }
+    }
+    @-webkit-keyframes anime {
+        0% {
+            opacity: 0;
+        }
+        30% {
+            opacity: 1;
+        }
+        35% {
+            opacity: 1;
+        }
+        50% {
+            opacity: 0;
+            z-index: 9;
+        }
+        100% {
+            opacity: 0;
+        }
     }
 }
