link_button のposition width　変更

--- a/_src/sass/_mixins.scss
+++ b/_src/sass/_mixins.scss
@@ -177,7 +177,7 @@
     text-align: center;
     padding-top: 20px;
     padding-bottom: 20px;
-    width: $contentWidth;
+    width: 100%;
     margin: 0 auto;
     border: 1px solid $yellow;
     border-radius: $borderRadius;
