--- a/_src/sass/_mixins.scss
+++ b/_src/sass/_mixins.scss
@@ -145,7 +145,6 @@
 @mixin logs_list {
     .logs_list_item {
         width: 100%;
-        margin-bottom: 100px;
         .logs_image {
             display: block;
             object-fit: cover;
@@ -188,134 +187,25 @@
     }
 }
 
-@mixin log_list_animation {
-    ul {
-        position: relative;
-    }
-    .logs_list_item {
-        position: absolute;
-        left: 0;
-        top: 0;
-        opacity: 0;
-        -webkit-animation: anime 30s 0s infinite;
-        animation: anime 30s 0s infinite;
-    }
-    .logs_list_item:nth-of-type(2) {
-        -webkit-animation-delay: 10s;
-        animation-delay: 10s;
-    }
-    .logs_list_item:nth-of-type(3) {
-        -webkit-animation-delay: 20s;
-        animation-delay: 20s;
-    }
-    /* ふわっとアニメーション */
-    @keyframes anime {
-        0% {
-            opacity: 0;
-        }
-        30% {
-            opacity: 1;
-        }
-        35% {
-            opacity: 1;
-        }
-        50% {
-            opacity: 0;
-            z-index: 9;
-        }
-        100% {
-            opacity: 0;
-        }
-    }
-    @-webkit-keyframes anime {
-        0% {
-            opacity: 0;
-        }
-        30% {
-            opacity: 1;
-        }
-        35% {
-            opacity: 1;
-        }
-        50% {
-            opacity: 0;
-            z-index: 9;
-        }
-        100% {
-            opacity: 0;
-        }
-    }
-}
-
-@mixin event_list_animation {
-    ul {
-        position: relative;
-    }
-    .item {
-        opacity: 0;
+@mixin event_list {
+    &_list_item {
         width: 100%;
         height: 200px;
         object-fit: cover;
-        position: absolute;
-        left: 0;
-        top: 0;
         background-size: cover;
         border-radius: $borderRadius;
         background-repeat: no-repeat;
-        -webkit-animation: anime 30s 0s infinite;
-        animation: anime 30s 0s infinite;
         &_tag {
             @include _tag("240px");
         }
     }
-    .item:nth-of-type(1) {
+    &_list_item:nth-of-type(1) {
         background-image: url(../img/usj.jpeg);
     }
-    .item:nth-of-type(2) {
-        -webkit-animation-delay: 10s;
-        animation-delay: 10s;
+    &_list_item:nth-of-type(2) {
         background-image: url(../img/twoyears.jpg);
     }
-    .item:nth-of-type(3) {
-        -webkit-animation-delay: 20s;
-        animation-delay: 20s;
+    &_list_item:nth-of-type(3) {
         background-image: url(../img/christmas02.jpeg);
-    }
-    /* ふわっとアニメーション */
-    @keyframes anime {
-        0% {
-            opacity: 0;
-        }
-        30% {
-            opacity: 1;
-        }
-        35% {
-            opacity: 1;
-        }
-        50% {
-            opacity: 0;
-            z-index: 9;
-        }
-        100% {
-            opacity: 0;
-        }
-    }
-    @-webkit-keyframes anime {
-        0% {
-            opacity: 0;
-        }
-        30% {
-            opacity: 1;
-        }
-        35% {
-            opacity: 1;
-        }
-        50% {
-            opacity: 0;
-            z-index: 9;
-        }
-        100% {
-            opacity: 0;
-        }
     }
 }
