--- a/_src/sass/_mixins.scss
+++ b/_src/sass/_mixins.scss
@@ -190,6 +190,8 @@
 @mixin event_list {
     &_list_item {
         width: 100%;
+    }
+    .event_image {
         height: 200px;
         object-fit: cover;
         background-size: cover;
@@ -199,13 +201,13 @@
             @include _tag("240px");
         }
     }
-    &_list_item:nth-of-type(1) {
+    .event_image:nth-of-type(1) {
         background-image: url(../img/usj.jpeg);
     }
-    &_list_item:nth-of-type(2) {
+    .event_image:nth-of-type(2) {
         background-image: url(../img/twoyears.jpg);
     }
-    &_list_item:nth-of-type(3) {
+    .event_image:nth-of-type(3) {
         background-image: url(../img/christmas02.jpeg);
     }
 }
