--- a/css/style.css
+++ b/css/style.css
@@ -216,69 +216,67 @@ p {
   /* ふわっとアニメーション */
 }
 
-#top .main .logs .logs_list_item {
+#top .main .logs_list_item {
   width: 100%;
 }
 
-#top .main .logs .logs_list_item .logs_image {
-  display: block;
+#top .main .logs_image {
+  height: 500px;
   -o-object-fit: cover;
      object-fit: cover;
   background-size: cover;
-  height: 500px;
   border-radius: 10px;
-  z-index: 1;
 }
 
-#top .main .logs .logs_list_item .logs_image_tag {
+#top .main .logs_image_tag {
   display: block;
   background-color: #fffef8;
   width: 300px;
-  z-index: 2;
+  z-index: 10;
   position: relative;
   top: calc(500px - 100px);
   border-top-right-radius: 10px;
   padding: 10px;
 }
 
-#top .main .logs .logs_list_item .logs_image_tag h3 {
+#top .main .logs_image_tag h3 {
   font-size: 0.8rem;
   color: #ffd54d;
 }
 
-#top .main .logs .logs_list_item .logs_image_tag .text {
+#top .main .logs_image_tag .text {
   font-size: 1.0rem;
   font-weight: bold;
   line-height: 1.6;
 }
 
-#top .main .logs .logs_list_item .logs_image_tag .place {
+#top .main .logs_image_tag .place {
   font-size: 0.8rem;
   line-height: 1.6;
   color: #444;
 }
 
-#top .main .logs .logs_list_item .logs_image_tag .hashtag_list {
+#top .main .logs_image_tag .hashtag_list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-#top .main .logs .logs_list_item .logs_image_tag .hashtag_list_item {
+#top .main .logs_image_tag .hashtag_list_item {
   color: #666;
   font-size: 0.8rem;
   margin-right: 4px;
 }
 
-#top .main .logs .logs_list_item .logs_image_01 {
+#top .main .logs_image_01 {
   background-image: url("../img/top.jpeg");
 }
 
-#top .main .logs .logs_list_item .logs_image_02 {
+#top .main .logs_image_02 {
   background-image: url("../img/oneyear.jpeg");
 }
 
-#top .main .logs .logs_list_item .logs_image_03 {
+#top .main .logs_image_03 {
   background-image: url("../img/tranporin.JPG");
 }
 
@@ -373,65 +371,64 @@ p {
   width: 100%;
 }
 
-#top .main .event .event_image {
+#top .main .event_image {
   height: 200px;
   -o-object-fit: cover;
      object-fit: cover;
   background-size: cover;
   border-radius: 10px;
-  background-repeat: no-repeat;
 }
 
-#top .main .event .event_image_tag {
+#top .main .event_image_tag {
   display: block;
   background-color: #fffef8;
   width: 300px;
-  z-index: 2;
+  z-index: 10;
   position: relative;
   top: calc(240px - 100px);
   border-top-right-radius: 10px;
   padding: 10px;
 }
 
-#top .main .event .event_image_tag h3 {
+#top .main .event_image_tag h3 {
   font-size: 0.8rem;
   color: #ffd54d;
 }
 
-#top .main .event .event_image_tag .text {
+#top .main .event_image_tag .text {
   font-size: 1.0rem;
   font-weight: bold;
   line-height: 1.6;
 }
 
-#top .main .event .event_image_tag .place {
+#top .main .event_image_tag .place {
   font-size: 0.8rem;
   line-height: 1.6;
   color: #444;
 }
 
-#top .main .event .event_image_tag .hashtag_list {
+#top .main .event_image_tag .hashtag_list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-#top .main .event .event_image_tag .hashtag_list_item {
+#top .main .event_image_tag .hashtag_list_item {
   color: #666;
   font-size: 0.8rem;
   margin-right: 4px;
 }
 
-#top .main .event .event_image:nth-of-type(1) {
-  background-image: url(../img/usj.jpeg);
+#top .main .event_image_01 {
+  background-image: url("../img/usj.jpeg");
 }
 
-#top .main .event .event_image:nth-of-type(2) {
-  background-image: url(../img/twoyears.jpg);
+#top .main .event_image_02 {
+  background-image: url("../img/twoyears.jpg");
 }
 
-#top .main .event .event_image:nth-of-type(3) {
-  background-image: url(../img/christmas02.jpeg);
+#top .main .event_image_03 {
+  background-image: url("../img/christmas02.jpeg");
 }
 
 #top .main .event_list {
