--- a/_src/sass/_top.scss
+++ b/_src/sass/_top.scss
@@ -1,27 +1,3 @@
-.header {
-    height: 60px;
-    z-index: 3;
-    &_left {
-        .title {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            font-size: 20px;
-            line-height: 1em;
-            float: left;
-            z-index: 3;
-        }
-    }
-    &_right {
-        float: right;
-        z-index: 3;
-        @include hamburgerMenu;
-    }
-    .clear {
-        clear: both;
-    }
-}
-
 .main {
     margin: 0;
     width: 375px;
@@ -49,15 +25,45 @@
         @include event_list;
         @include list_animation;
         .link_button_news {
-            @include link_button(380px);
-            // width: 100%;
+            @include link_button(400px);
         }
     }
     .post {
         position: relative;
         top: 1000px;
+        &_image {
+            margin-bottom: 20px;
+            width: 100%;
+            opacity: 0.7;
+            height: 300px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            border-radius: $borderRadius;
+            &_title {
+                color: $backgroundColor;
+                opacity: 1;
+                text-align: center;
+                position: relative;
+                top: 100px;
+                font-size: 2rem;
+                background-color: rgba($color: #000000, $alpha: 0.6);
+                padding: 1rem 0;
+                width: 96%;
+                border-top-right-radius: $borderRadius;
+                border-bottom-right-radius: $borderRadius;
+                &_orange {
+                    color: #e29c05;
+                }
+            }
+        }
+        &_image_01 {
+            background-image: url("../img/tsurugi.jpeg");
+        }
+        &_image_02 {
+            background-image: url("../img/camp.jpg");
+        }
         .link_button_post {
-            @include link_button(200px);
+            @include link_button(730px);
         }
     }
 }
