--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,12 @@ p {
   letter-spacing: 0;
 }
 
-#top .header {
+.header {
   height: 60px;
   z-index: 3;
 }
 
-#top .header_left .title {
+.header_left .title {
   position: fixed;
   top: 20px;
   left: 20px;
@@ -53,12 +53,12 @@ p {
   z-index: 3;
 }
 
-#top .header_right {
+.header_right {
   float: right;
   z-index: 3;
 }
 
-#top .header_right .menu-btn {
+.header_right .menu-btn {
   position: fixed;
   right: 10px;
   display: -webkit-box;
@@ -75,9 +75,9 @@ p {
   z-index: 90;
 }
 
-#top .header_right .menu-btn span,
-#top .header_right .menu-btn span:before,
-#top .header_right .menu-btn span:after {
+.header_right .menu-btn span,
+.header_right .menu-btn span:before,
+.header_right .menu-btn span:after {
   content: '';
   display: block;
   height: 3px;
@@ -87,36 +87,36 @@ p {
   position: absolute;
 }
 
-#top .header_right .menu-btn span:before {
+.header_right .menu-btn span:before {
   bottom: 8px;
 }
 
-#top .header_right .menu-btn span:after {
+.header_right .menu-btn span:after {
   top: 8px;
 }
 
-#top .header_right #menu-btn-check:checked ~ .menu-btn span {
+.header_right #menu-btn-check:checked ~ .menu-btn span {
   background-color: rgba(255, 255, 255, 0);
   /*メニューオープン時は真ん中の線を透明にする*/
 }
 
-#top .header_right #menu-btn-check:checked ~ .menu-btn span::before {
+.header_right #menu-btn-check:checked ~ .menu-btn span::before {
   bottom: 0;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
 }
 
-#top .header_right #menu-btn-check:checked ~ .menu-btn span::after {
+.header_right #menu-btn-check:checked ~ .menu-btn span::after {
   top: 0;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
 }
 
-#top .header_right #menu-btn-check {
+.header_right #menu-btn-check {
   display: none;
 }
 
-#top .header_right .menu-content {
+.header_right .menu-content {
   width: 90%;
   height: 100%;
   position: fixed;
@@ -126,17 +126,17 @@ p {
   background-color: #ffd54d;
 }
 
-#top .header_right .menu-content ul {
+.header_right .menu-content ul {
   padding: 70px 10px 0;
 }
 
-#top .header_right .menu-content ul li {
+.header_right .menu-content ul li {
   border-bottom: solid 2px #000;
   list-style: none;
   margin-top: 10px;
 }
 
-#top .header_right .menu-content ul li a {
+.header_right .menu-content ul li a {
   display: block;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -147,11 +147,11 @@ p {
   position: relative;
 }
 
-#top .header_right .menu-content ul li .menu_icon {
+.header_right .menu-content ul li .menu_icon {
   margin: 0 6px;
 }
 
-#top .header_right .menu-content ul li a::before {
+.header_right .menu-content ul li a::before {
   content: "";
   width: 7px;
   height: 7px;
@@ -164,7 +164,7 @@ p {
   top: 16px;
 }
 
-#top .header_right .menu-content {
+.header_right .menu-content {
   width: 100%;
   height: 100%;
   position: fixed;
@@ -178,13 +178,35 @@ p {
   /*アニメーション設定*/
 }
 
-#top .header_right #menu-btn-check:checked ~ .menu-content {
+.header_right #menu-btn-check:checked ~ .menu-content {
   left: 0;
   /*メニューを画面内へ*/
 }
 
-#top .header .clear {
+.header .clear {
   clear: both;
+}
+
+.footer {
+  position: relative;
+  top: 1060px;
+  text-align: center;
+}
+
+.footer_image {
+  width: 30%;
+  position: relative;
+  top: 100px;
+  -webkit-filter: drop-shadow(0 0 0.3rem black);
+          filter: drop-shadow(0 0 0.3rem black);
+}
+
+.footer_text {
+  color: #444;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  position: relative;
+  top: 100px;
+  padding-bottom: 10px;
 }
 
 #top .main {
@@ -204,6 +226,7 @@ p {
 
 #top .main section .section_title {
   text-align: center;
+  margin: 16px 0;
   padding-bottom: 10px;
 }
 
@@ -494,7 +517,7 @@ p {
 
 #top .main .event .link_button_news {
   position: absolute;
-  top: 380px;
+  top: 400px;
   font-size: 1.2rem;
   font-weight: bold;
   text-align: center;
@@ -517,9 +540,45 @@ p {
   top: 1000px;
 }
 
+#top .main .post_image {
+  margin-bottom: 20px;
+  width: 100%;
+  opacity: 0.7;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+#top .main .post_image_title {
+  color: #fffef8;
+  opacity: 1;
+  text-align: center;
+  position: relative;
+  top: 100px;
+  font-size: 2rem;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 1rem 0;
+  width: 96%;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+#top .main .post_image_title_orange {
+  color: #e29c05;
+}
+
+#top .main .post_image_01 {
+  background-image: url("../img/tsurugi.jpeg");
+}
+
+#top .main .post_image_02 {
+  background-image: url("../img/camp.jpg");
+}
+
 #top .main .post .link_button_post {
   position: absolute;
-  top: 200px;
+  top: 730px;
   font-size: 1.2rem;
   font-weight: bold;
   text-align: center;
