--- a/_src/sass/_base.scss
+++ b/_src/sass/_base.scss
@@ -12,6 +12,7 @@ body {
     line-height: 1.5;
     font-family: Arial, Helvetica, sans-serif;
     color: #000;
+    @include loading_animation;
 }
 
 h1 {
